// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building domain source map should have source map data 1`] = `
DomainSourceMap {
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "domainItems": Array [
    Object {
      "column": 4,
      "line": 5,
      "tokenText": "domain entity",
    },
  ],
  "entities": Array [],
  "footerDocumentation": Object {
    "column": 4,
    "line": 6,
    "tokenText": "footer documentation",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 33,
    "line": 5,
    "tokenText": "[2]",
  },
  "metaEdName": Object {
    "column": 9,
    "line": 2,
    "tokenText": "DomainName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "subdomains": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain",
  },
}
`;

exports[`when building domain with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'common', 'descriptor', 'domain entity', 'inline common', 'footer documentation'}, column: 0, line: 6, token: TrailingText",
]
`;

exports[`when building domain with lowercase domain name should have extraneous input error 1`] = `
Array [
  "extraneous input 'domain' expecting ID, column: 9, line: 2, token: domain",
]
`;

exports[`when building domain with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 3, token: domain entity",
]
`;

exports[`when building domain with no domain item should have mismatched input error 1`] = `
Array [
  "mismatched input 'footer documentation' expecting {'association', 'common', 'descriptor', 'domain entity', 'inline common'}, column: 4, line: 5, token: footer documentation",
]
`;

exports[`when building domain with no domain name should have missing id error 1`] = `
Array [
  "missing ID at '[1]', column: 10, line: 2, token: [1]",
]
`;

exports[`when building domain with no text in footer documentation should have missing text error 1`] = `
Array [
  "missing TEXT at 'End Namespace', column: 0, line: 7, token: End Namespace",
]
`;

exports[`when building duplicate domains should have validation failures for each entity -> Domain 1 message 1`] = `"Domain named DomainName is a duplicate declaration of that name."`;

exports[`when building duplicate domains should have validation failures for each entity -> Domain 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 8,
  "tokenText": "Domain",
}
`;

exports[`when building duplicate domains should have validation failures for each entity -> Domain 2 message 1`] = `"Domain named DomainName is a duplicate declaration of that name."`;

exports[`when building duplicate domains should have validation failures for each entity -> Domain 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain",
}
`;

exports[`when building subdomain with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 7, token: TrailingText",
]
`;

exports[`when building subdomain with lowercase parent domain name should have extraneous input error 1`] = `
Array [
  "extraneous input 'parent' expecting ID, column: 26, line: 2, token: parent",
]
`;

exports[`when building subdomain with lowercase subdomain name should have extraneous input error 1`] = `
Array [
  "extraneous input 'domain' expecting ID, column: 12, line: 2, token: domain",
]
`;

exports[`when building subdomain with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 3, token: domain entity",
]
`;

exports[`when building subdomain with no domain item should have mismatched input error 1`] = `
Array [
  "mismatched input 'position' expecting {'association', 'common', 'descriptor', 'domain entity', 'inline common'}, column: 4, line: 5, token: position",
]
`;

exports[`when building subdomain with no parent domain name should have missing id error 1`] = `
Array [
  "missing ID at '[10]', column: 27, line: 2, token: [10]",
]
`;

exports[`when building subdomain with no subdomain name should have extraneous input error 1`] = `
Array [
  "extraneous input 'of' expecting ID, column: 13, line: 2, token: of",
  "mismatched input '[10]' expecting 'of', column: 33, line: 2, token: [10]",
]
`;

exports[`when building subdomain with no unsigned int in position should have missing unsigned int error 1`] = `
Array [
  "missing UNSIGNED_INT at 'End Namespace', column: 0, line: 7, token: End Namespace",
]
`;
